[package]
name = "hello-ratatui"
version = "0.1.0"
authors = ["Paul Adam"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
# ratatui = "0.29.0"
# ratatui = {git = ""}
ratatui = {path = "../ratatui/ratatui"}
rand = "0.9.0"
unicode-segmentation = "1.12.0"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = true
